--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,11 @@ dependencies = [
     "typer>=0.16.0",
     "typing-extensions>=4.13.2,<5.0.0",
     "uvicorn>=0.34.2",
+    "autopep8>=2.3.2",
+    "prance>=25.4.8.0",
+    "ruamel-yaml>=0.18.14",
+    "questionary>=2.1.0",
+    "openapi-spec-validator>=0.7.2",
 ]
 
 [project.scripts]
