Improved code coverage, added dependency management

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -111,6 +111,10 @@ source = ["src"]
 context = "thread"
 parallel = true
 concurrency = ["thread", "multiprocessing"]
+omit = [
+    "src/bedrock_agentcore_starter_toolkit/cli/import_agent/*",
+    "src/bedrock_agentcore_starter_toolkit/services/import_agent/utils/*",
+]
 
 [tool.coverage.report]
 show_missing = true
