--- a/pyproject.toml
+++ b/pyproject.toml
@@ -112,8 +112,8 @@ context = "thread"
 parallel = true
 concurrency = ["thread", "multiprocessing"]
 omit = [
-    "src/bedrock_agentcore_starter_toolkit/cli/import_agent/*",
-    "src/bedrock_agentcore_starter_toolkit/services/import_agent/utils/*",
+    "src/bedrock_agentcore_starter_toolkit/cli/import_agent/*", # CLI requires user input to test
+    "src/bedrock_agentcore_starter_toolkit/services/import_agent/utils.py", # Utils are not tested directly
 ]
 
 [tool.coverage.report]
