Added OpenAPI to JSON Schema Logic

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ dependencies = [
     "ruamel-yaml>=0.18.14",
     "questionary>=2.1.0",
     "openapi-spec-validator>=0.7.2",
+    "py-openapi-schema-to-json-schema>=0.0.3",
 ]
 
 [project.scripts]
