--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ dependencies = [
     "urllib3>=1.26.0",
     "pyyaml>=6.0.2",
     "requests>=2.25.0",
-    "rich",
+    "rich>=13.0.0",
     "toml>=0.10.2",
     "typer>=0.16.0",
     "typing-extensions>=4.13.2,<5.0.0",
