--- a/src/bedrock_agentcore_starter_toolkit/services/import_agent/assets/requirements_langchain.txt
+++ b/src/bedrock_agentcore_starter_toolkit/services/import_agent/assets/requirements_langchain.txt
@@ -1,198 +1,9 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.12.14
-aiosignal==1.4.0
-annotated-types==0.7.0
-anthropic==0.37.1
-anyio==4.9.0
-appnope==0.1.4
-astor==0.8.1
-asttokens==3.0.0
-async-timeout==4.0.3
-attrs==25.3.0
-bedrock-agentcore==0.1.1
-bedrock-agentcore-starter-toolkit==0.1.2
-blessed==1.21.0
-boto3==1.39.15
-botocore==1.39.15
-cachetools==5.5.2
-certifi==2025.7.14
-charset-normalizer==3.4.2
-click==8.2.1
-comm==0.2.3
-contourpy==1.3.2
-cycler==0.12.1
-dataclasses-json==0.6.7
-debugpy==1.8.15
-decorator==5.2.1
-Deprecated==1.2.18
-distro==1.9.0
-dnspython==2.7.0
-docstring_parser==0.17.0
-editor==1.6.6
-email_validator==2.2.0
-exceptiongroup==1.3.0
-executing==2.2.0
-fastapi==0.115.2
-fastapi-cli==0.0.7
-filelock==3.18.0
-fonttools==4.59.0
-frozenlist==1.7.0
-fsspec==2025.7.0
-git-python==1.0.3
-gitdb==4.0.12
-GitPython==3.1.45
-google-ai-generativelanguage==0.6.6
-google-api-core==2.25.1
-google-api-python-client==2.177.0
-google-auth==2.40.3
-google-auth-httplib2==0.2.0
-google-generativeai==0.7.2
-googleapis-common-protos==1.70.0
-grpcio==1.74.0
-grpcio-status==1.62.3
-h11==0.16.0
-hf-xet==1.1.5
-html2image==2.0.7
-html2text==2024.2.26
-httpcore==1.0.9
-httplib2==0.22.0
-httptools==0.6.4
-httpx==0.28.1
-httpx-sse==0.4.1
-huggingface-hub==0.34.2
-idna==3.10
-importlib_metadata==7.1.0
-inputimeout==1.0.4
-inquirer==3.4.0
-ipykernel==6.30.0
-ipython==8.37.0
-jedi==0.19.2
-Jinja2==3.1.6
-jiter==0.10.0
-jmespath==1.0.1
-joblib==1.5.1
-jsonpatch==1.33
-jsonpointer==3.0.0
-jsonschema==4.25.0
-jsonschema-specifications==2025.4.1
-jupyter_client==8.6.3
-jupyter_core==5.8.1
-kiwisolver==1.4.8
-langchain==0.3.27
-langchain-aws==0.2.29
-langchain-community==0.3.27
-langchain-core==0.3.72
-langchain-mcp-adapters==0.1.9
-langchain-text-splitters==0.3.9
-langgraph==0.6.0
-langgraph-checkpoint==2.1.1
-langgraph-prebuilt==0.6.0
-langgraph-sdk==0.2.0
-langsmith==0.4.8
-litellm==1.74.9
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-marshmallow==3.26.1
-matplotlib==3.10.3
-matplotlib-inline==0.1.7
-mcp==1.12.2
-mdurl==0.1.2
-multidict==6.6.3
-mypy_extensions==1.1.0
-nest-asyncio==1.6.0
-nltk==3.9.1
-numpy==1.26.4
-open-interpreter==0.4.3
-openai==1.97.1
-opentelemetry-api==1.25.0
-opentelemetry-if-instrumentation-langchain==0.25.6
-opentelemetry-if-semantic-conventions-ai==0.3.6
-opentelemetry-instrumentation==0.46b0
-opentelemetry-instrumentation-langchain==0.43.1
-opentelemetry-semantic-conventions==0.46b0
-opentelemetry-semantic-conventions-ai==0.4.11
-orjson==3.11.1
-ormsgpack==1.10.0
-outcome==1.3.0.post0
-packaging==25.0
-parso==0.8.4
-pexpect==4.9.0
-pillow==11.3.0
-platformdirs==4.3.8
-prompt_toolkit==3.0.51
-propcache==0.3.2
-proto-plus==1.26.1
-protobuf==4.25.8
-psutil==5.9.8
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pydantic==2.11.7
-pydantic-settings==2.10.1
-pydantic_core==2.33.2
-Pygments==2.19.2
-pyparsing==3.2.3
-pyperclip==1.9.0
-PySocks==1.7.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.1
-python-multipart==0.0.20
-PyYAML==6.0.2
-pyzmq==27.0.0
-readchar==4.2.1
-referencing==0.36.2
-regex==2024.11.6
-requests==2.32.4
-requests-toolbelt==1.0.0
-rich==14.1.0
-rich-toolkit==0.14.9
-rpds-py==0.26.0
-rsa==4.9.1
-runs==1.2.2
-s3transfer==0.13.1
-selenium==4.34.2
-Send2Trash==1.8.3
-shellingham==1.5.4
-shortuuid==1.0.13
-six==1.17.0
-smmap==5.0.2
-sniffio==1.3.1
-sortedcontainers==2.4.0
-SQLAlchemy==2.0.42
-sse-starlette==3.0.2
-stack-data==0.6.3
-starlette==0.47.2
-tenacity==9.1.2
-termcolor==2.3.0
-tiktoken==0.7.0
-tokenizers==0.21.4
-tokentrim==0.1.13
-toml==0.10.2
-tornado==6.5.1
-tqdm==4.67.1
-traitlets==5.14.3
-trio==0.30.0
-trio-websocket==0.12.2
-typer==0.16.0
-typing-inspect==0.9.0
-typing-inspection==0.4.1
-typing_extensions==4.14.1
-uritemplate==4.2.0
-urllib3==2.5.0
-uvicorn==0.35.0
-uvloop==0.21.0
-watchfiles==1.1.0
-wcwidth==0.2.13
-webdriver-manager==4.0.2
-websocket-client==1.8.0
-websockets==15.0.1
-wget==3.2
-wrapt==1.17.2
-wsproto==1.2.0
-xmod==1.8.1
-xxhash==3.5.0
-yarl==1.20.1
-yaspin==3.1.0
-zipp==3.23.0
-zstandard==0.23.0
+bedrock-agentcore
+bedrock-agentcore-starter-toolkit
+langchain
+langchain-aws
+langchain-community
+langchain-mcp-adapters
+langgraph
+inputimeout
+opentelemetry-instrumentation-langchain
