fix: pass version correctly between jobs

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -219,7 +219,7 @@ jobs:
 
   build:
     name: Build Distribution
-    needs: test
+    needs: [prepare-release, test]
     runs-on: ubuntu-latest
     if: needs.test.result == 'success' || needs.prepare-release.result == 'success'
 
