Updated Agent Builder

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -115,6 +115,10 @@ concurrency = ["thread", "multiprocessing"]
 omit = [
     "src/bedrock_agentcore_starter_toolkit/cli/import_agent/*", # CLI requires user input to test
     "src/bedrock_agentcore_starter_toolkit/services/import_agent/utils.py", # Utils are not tested directly
+    "src/bedrock_agentcore_starter_toolkit/services/create/base_agent_create.py", # Base class not tested directly
+    "src/bedrock_agentcore_starter_toolkit/services/create/strands_create.py", # Strands creation not tested directly
+    "src/bedrock_agentcore_starter_toolkit/services/create/utils.py", # Utils are not tested directly
+    "src/bedrock_agentcore_starter_toolkit/cli/create/commands.py", # CLI requires user input to test
 ]
 
 [tool.coverage.report]
