--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ dependencies = [
     "questionary>=2.1.0",
     "openapi-spec-validator>=0.7.2",
     "py-openapi-schema-to-json-schema>=0.0.3",
+    "python-dotenv>=1.1.1",
 ]
 
 [project.scripts]
